--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -79,7 +79,7 @@ First, let's make sure you can log in to {{< var vm.product >}}.
 
 ::: {.panel-tabset}
 
-### Prerequisite course
+### Prerequisite courses
 
 To continue, you need to have been [onboarded](developer-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa code >}} Developer**]{.bubble} role and completed the first two modules of this course:
 
