--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -79,7 +79,7 @@ First, let's make sure you can log in to {{< var vm.product >}}.
 
 ::: {.panel-tabset}
 
-### Prerequisite course
+### Prerequisite courses
 
 To continue, you need to have been [onboarded](validator-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa circle-check >}} Validator**]{.bubble} role and completed the first two modules of this course:
 
